Adding screenshot.js, which is used to make it easier to take screenshots of Tab Organizer.

--- a/window.html
+++ b/window.html
@@ -42,6 +42,11 @@
     <script src="Tab%20Organizer.js"></script>
 
     <script src="lib/Analytics.js"></script>
+
+    <!--**
+        *  This is to make it easier to take screenshots when the UI changes.
+        *-->
+    <!--<script src="screenshot.js"></script>-->
     <script src="window.js"></script>
 </body>
 </html>
