Changing to an absolute URL.

--- a/window.html
+++ b/window.html
@@ -46,7 +46,7 @@
     <!--**
         *  This is to make it easier to take screenshots when the UI changes.
         *-->
-    <!--<script src="screenshot.js"></script>-->
+    <!--<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
     <script src="window.js"></script>
 </body>
 </html>
