--- a/themes/window-viewer.html
+++ b/themes/window-viewer.html
@@ -70,7 +70,7 @@
                         element.setAttribute("data-selected", "");
                     }
                     if (info.last) {
-                        element.setAttribute("last", "");
+                        element.setAttribute("data-last", "");
                     }
                     element.appendChild(UI.create("div", function (element) {
                         element.className = "window-div";
