Renaming data-focused to data-selected Renaming data-selected to data-focused Renaming data-queued to data-selected

--- a/themes/window-viewer.html
+++ b/themes/window-viewer.html
@@ -67,7 +67,7 @@
                 table.appendChild(UI.create("td", function (element) {
                     element.className = "window";
                     if (info.selected) {
-                        element.setAttribute("data-selected", "");
+                        element.setAttribute("data-focused", "");
                     }
                     if (info.last) {
                         element.setAttribute("data-last", "");
