--- a/window.html
+++ b/window.html
@@ -26,7 +26,7 @@
                 }
             }, true);
 
-            document.getElementsByTagName("head")[0].appendChild(link);
+            document.head.appendChild(link);
         }());
     </script>
 
