Rewording the options page a bit.

--- a/options.html
+++ b/options.html
@@ -601,7 +601,11 @@
 
                         container.space({ height: "1em" });
 
-                        container.text("No personal information is tracked, and this information is used solely to improve Tab Organizer.");
+                        container.text("We do not track your search queries or window titles.");
+
+                        container.space({ height: "1em" });
+
+                        container.text("This information is anonymous and is used solely to improve Tab Organizer.");
 
                         container.space({ height: "1.25em" });
 
