Various tweaks and fixes.

--- a/background.html
+++ b/background.html
@@ -37,6 +37,8 @@
             "tabs.close.location": "right",
             "tabs.close.display": "hover",
 
+            "search.show-number": 5,
+
             "usage-tracking": true
         };
         Options.setDefaults(defaults);
