Update issue 57 Status: Pending

--- a/background.html
+++ b/background.html
@@ -37,6 +37,8 @@
             "tabs.close.location": "right",
             "tabs.close.display": "hover",
 
+            "windows.middle-close": false,
+
             "search.show-number": 5,
 
             "usage-tracking": true
