Visual tweaks to the options page.

--- a/options.html
+++ b/options.html
@@ -97,6 +97,8 @@
                             text: "Alt"
                         });
 
+                        container.space({ height: "3px" });
+
                         container.input("text", {
                             option: "popup.hotkey.letter",
                             maxlength: 1,
