--- a/window.html
+++ b/window.html
@@ -31,6 +31,7 @@
     </script>
 
     <link rel="stylesheet" type="text/css" href="lib/Options.css" />
+    <link rel="stylesheet" type="text/css" href="lib/UI%20Helper.css" />
     <link rel="stylesheet" type="text/css" href="window.css" />
 </head>
 <body>
