This does almost all the work for issue 65. The un/favorite images still look awful, though, so I need to make better ones.
This also makes some other small tweaks.

Also, we now send all the options to Google Analytics, rather than just the options that have changed.

--- a/background.html
+++ b/background.html
@@ -57,19 +57,19 @@
         };
 */
 
-        var user = Options.snapshot().user;
+        var config = Options.getAll();
         var code = "usage-tracking";
 
-        Object.keys(user).forEach(function (key) {
+        Object.keys(config).forEach(function (key) {
             if (key in defaults) {
                 if (Options.get(code) || key === code) {
-                    _gaq.push(['_trackEvent', key, user[key]]);
-                    //console.log("tracked -", key, user[key]);
+                    _gaq.push(['_trackEvent', key, config[key]]);
+                    //console.log("tracked -", key, config[key]);
                 } else {
-                    //console.log(true, key, user[key]);
+                    //console.log(true, key, config[key]);
                 }
             } else {
-                //console.log(false, key, user[key]);
+                //console.log(false, key, config[key]);
             }
         });
         //console.log(_gaq);
